infra/k8s/rabbitmq-depl.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-srv
  labels:
    app: rabbitmq
spec:
  ports:
    - protocol: TCP
      targetPort: 5672
      port: 5672
      name: rabbitmq
  clusterIP: None
  selector:
    app: rabbitmq
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rabbitmq
spec:
  replicas: 2
  serviceName: rabbitmq-srv
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: rabbitmq
          image: rabbitmq
          ports:
            - containerPort: 5672
              name: rabbitmq
          volumeMounts:
            - name: rabbitmq-data
              mountPath: /var/lib/rabbitmq
      volumes:
        - name: rabbitmq-data
          hostPath:
            path: /data/rabbitmq
            type: DirectoryOrCreate
